--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,59 +21,21 @@ jobs:
         with: 
           submodules: true
 
-      - name: Get packageName
-        id: packageName
-        uses: notiz-dev/github-action-json-property@7c8cf5cc36eb85d8d287a8086a39dac59628eb31
-        with: 
-            path: "package.json"
-            prop_path: "name"
-          
-      - name: Set PackageName Variable
-        run: |
-          echo "packageName=${{steps.packageName.outputs.prop}}" >> $GITHUB_ENV
-          
-      - name: Get version
-        id: version
-        uses: notiz-dev/github-action-json-property@7c8cf5cc36eb85d8d287a8086a39dac59628eb31
-        with: 
-            path: "package.json"
-            prop_path: "version"
-    
-      - name: Set Environment Variables
-        run: |
-          echo "zipFile=${{ env.packageName }}-${{ steps.version.outputs.prop }}".zip >> $GITHUB_ENV
-          echo "unityPackage=${{ env.packageName }}-${{ steps.version.outputs.prop }}.unitypackage" >> $GITHUB_ENV
-        
-      - name: Move files and List targets
-        run: |
-          shopt -s extglob
-          mkdir -p "Packages/${{env.packageName}}"
-          mv !("Packages") "Packages/${{env.packageName}}/"
-          find "Packages/${{env.packageName}}/" -name \*.meta >> metaList
-
-      - name: Create Zip
-        uses: thedoctor0/zip-release@09336613be18a8208dfa66bd57efafd9e2685657
+      - name: Packaging
+        id: packager
+        uses: "docker://ghcr.io/rerigferl/vpm-packager:latest"
         with:
-          type: "zip"
-          directory: "./Packages/${{env.packageName}}"
-          filename: "../../${{env.zipFile}}"
-          exclusions: '*.git*'
-
-      - name: Create UnityPackage
-        uses: pCYSl5EDgo/create-unitypackage@cfcd3cf0391a5ef1306342794866a9897c32af0b
-        with:
-          package-path: "${{env.unityPackage}}"
-          include-files: metaList
-
+          args: "-z -u"
+          
       - name: Make Release
-        if: ${{ steps.version.outputs.prop != '0.0.0' }}
+        if: ${{ steps.packager.outputs.package-version != '0.0.0' }}
         uses: softprops/action-gh-release@v1
         with:
-          tag_name: ${{ steps.version.outputs.prop }}
-          prerelease: ${{ contains(steps.version.outputs.prop, '-') }}
+          tag_name: ${{ steps.packager.outputs.package-version }}
+          prerelease: ${{ contains(steps.packager.outputs.package-version, '-') }}
           files: |
-            ${{env.zipFile}}
-            ${{env.unityPackage}}
-            Packages/${{env.packageName}}/package.json
+            ${{steps.packager.outputs.zip-path}}
+            ${{steps.packager.outputs.unitypackage-path}}
+            ${{steps.packager.outputs.manifest-path}}
           
          
